[tool.poetry]
name = "florgon-cc-cli"
version = "0.2.1"
license = "MIT"
homepage = "https://cc.florgon.com/"
keywords = ["cli", "url shortener", "paste manager"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Typing :: Typed"
]
description = "CLI interface for https://cc.florgon.com/"
authors = ["Степан Зубков <zubkovbackend@gmail.com>"]
readme = "README.md"
packages = [{include = "florgon_cc_cli"}]

[tool.poetry.dependencies]
python = "^3.6"
click = "^8.1.3"
requests = "^2.28.2"

[tool.poetry.scripts]
florgon-cc = "florgon_cc_cli.main:main"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
